--- a/src/CLIBot.CLI/CLIBot.CLI.csproj
+++ b/src/CLIBot.CLI/CLIBot.CLI.csproj
@@ -1,5 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\CLIBot.Application\CLIBot.Application.csproj" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.13.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
