--- a/src/CLIBot.Domain/CLIBot.Domain.csproj
+++ b/src/CLIBot.Domain/CLIBot.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.11.3" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.12.0" />
+  </ItemGroup>
+
 </Project>
