Added git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-obj
-bin
 packages
-**/Debug
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+.vscode/*
+.vs/*
