--- a/src/ServiceBusBot.CLI/ServiceBusBot.CLI.csproj
+++ b/src/ServiceBusBot.CLI/ServiceBusBot.CLI.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ServiceBusBot.Agents\ServiceBusBot.Agents.csproj" />
+      <ProjectReference Include="..\ServiceBusBot.Storage\ServiceBusBot.Storage.csproj" />
     </ItemGroup>
 
   <PropertyGroup>
