--- a/src/ServiceBusBot.Storage/ServiceBusBot.Storage.csproj
+++ b/src/ServiceBusBot.Storage/ServiceBusBot.Storage.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceBusBot.Domain\ServiceBusBot.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
