--- a/src/ServiceBusBot.Agents/ServiceBusBot.Agents.csproj
+++ b/src/ServiceBusBot.Agents/ServiceBusBot.Agents.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Azure.AI.Projects" Version="1.0.0-beta.3" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.SemanticKernel" Version="1.33.0" />
 	  <PackageReference Include="Microsoft.SemanticKernel.Agents.Abstractions" Version="1.33.0-alpha" />
 	  <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.33.0-alpha" />
