--- a/src/ServiceBusBot.CLI/appsettings.json
+++ b/src/ServiceBusBot.CLI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AISettings": {
-    "AzureAIFoundryConnectionString": "eastus.api.azureml.ms;321612ee-0ba6-4a2e-a880-fdcbef35b2e6;gopa-ai-poc-rg;gopa-servicebusbot-dev",
+    "AzureAIFoundryConnectionString": "",
     "ServicebusAgentSettings": {
       "Service": "AzureOpenAI",
       "ModelId": "gpt-4o-mini"
